<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.authentication.SignUpActivity">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="346dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back_arrow"/>

        <TextView
            android:id="@+id/titleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/registerAccount"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleRegister"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintVertical_bias="0.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="15dp"
                    android:text="Register as Merchant: "/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/registerForMerchant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>



            <TextView
                android:id="@+id/txtRegisterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:letterSpacing="0.2"
                android:paddingStart="5dp"
                android:text="@string/emailAddress"
                android:textAllCaps="true"/>

            <EditText
                android:id="@+id/inputRegisterEmail"
                android:layout_width="281dp"
                android:layout_height="43dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:inputType="text|textEmailAddress"
                android:paddingStart="20dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txtRegisterUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:letterSpacing="0.2"
                android:paddingStart="5dp"
                android:text="@string/username"
                android:textAllCaps="true"/>

            <EditText
                android:id="@+id/inputRegisterUsername"
                android:layout_width="281dp"
                android:layout_height="43dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/insertPasswordLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRegisterPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:letterSpacing="0.2"
                    android:paddingStart="5dp"
                    android:text="@string/password"
                    android:textAllCaps="true"/>

                <EditText
                    android:contentDescription="@string/profileSettings"
                    android:id="@+id/inputRegisterPassword"
                    android:layout_width="281dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:paddingStart="20dp"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/passwordHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/passwordHint_length"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwHint_8char"/>

                    <TextView
                        android:id="@+id/passwordHint_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwHint_1Symb"/>

                    <TextView
                        android:id="@+id/passwordHint_capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwHint_1Upper"/>

                    <TextView
                        android:id="@+id/passwordHint_lower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwHint_1Lower"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtRegisterConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:letterSpacing="0.2"
                android:paddingStart="5dp"
                android:text="@string/confirmPassword"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/inputRegisterConfirmPassword"
                android:layout_width="281dp"
                android:layout_height="43dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingStart="20dp"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/secondary"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="50dp"
            android:letterSpacing="0.1"
            android:text="@string/register"
            android:textSize="16sp"
            android:topLeftRadius="50dp"
            android:topRightRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>