<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.authentication.LoginActivity">

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/login"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.2"
            android:paddingStart="5dp"
            android:text="@string/emailAddress"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/inputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLogin"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="281dp"
            android:layout_height="43dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="text|textEmailAddress"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.2"
            android:paddingStart="5dp"
            android:text="@string/password"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="281dp"
            android:layout_height="43dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="text|textPassword"
            android:maxLength="18"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/togglePassword"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="70dp"
            android:contentDescription="@string/viewPassword"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/linkForgetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_password_eye_solid" />

        <TextView
            android:id="@+id/linkForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgotPassword"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.785"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:layout_marginTop="375dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/secondary"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="50dp"
            android:letterSpacing="0.1"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:topLeftRadius="50dp"
            android:topRightRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:text="@string/registerText"
            app:layout_constraintEnd_toStartOf="@+id/linkRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/linkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="116dp"
            android:text="@string/signUp"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_adaptive_fore"
            android:alpha="0.7"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
