<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.profile.ChangePasswordActivity">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/update_password"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1"/>

        <TextView
            android:id="@+id/txtOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:letterSpacing="0.2"
            android:paddingStart="5dp"
            android:text="@string/oldPassword"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack" />

        <EditText
            android:id="@+id/inputOldPassword"
            android:layout_width="281dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtOldPassword"/>

        <LinearLayout
            android:id="@+id/insertPasswordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputOldPassword">

            <TextView
                android:id="@+id/txtRegisterPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:letterSpacing="0.2"
                android:paddingStart="5dp"
                android:text="@string/newPassword"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/inputNewPassword"
                android:layout_width="281dp"
                android:layout_height="43dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingStart="20dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

            <LinearLayout
                android:id="@+id/passwordHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/passwordHint_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwHint_8char"/>

                <TextView
                    android:id="@+id/passwordHint_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwHint_1Symb"/>

                <TextView
                    android:id="@+id/passwordHint_capital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwHint_1Upper"/>

                <TextView
                    android:id="@+id/passwordHint_lower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwHint_1Lower"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtRegisterConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:letterSpacing="0.2"
            android:paddingStart="5dp"
            android:text="@string/confirmPassword"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/inputConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insertPasswordLayout"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="281dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterConfirmPassword"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/secondary"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="50dp"
            android:letterSpacing="0.1"
            android:text="@string/update_password"
            android:textSize="16sp"
            android:topLeftRadius="50dp"
            android:topRightRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>