<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSignUpSuccessTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:text="@string/signup_success_title"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.459"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtSignUpSuccessDesc"
                    android:layout_width="331dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:text="@string/signup_success_text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSignUpSuccessTitle" />

                <Button
                    android:id="@+id/btnBacktoLogin"
                    android:layout_width="270dp"
                    android:layout_height="43dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/secondary"
                    android:bottomLeftRadius="50dp"
                    android:bottomRightRadius="50dp"
                    android:letterSpacing="0.1"
                    android:text="@string/back_to_login"
                    android:textSize="16sp"
                    android:topLeftRadius="50dp"
                    android:topRightRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
